--- a/repositorio/templates/repositorio/dashboard_estudiante.html
+++ b/repositorio/templates/repositorio/dashboard_estudiante.html
@@ -41,9 +41,11 @@ pueda visualizar los archivos subidos por el docente.
                             <td>{{ doc.titulo }}</td>
                             <td>{{ doc.docente.username }}</td>
                             <td>
-                                <a href="{{ doc.archivo.url }}" target="_blank" class="btn btn-outline-primary btn-sm me-1">
+                                <a href="{{ doc.archivo.url }}" target="_blank" class="btn btn-outline-primary btn-sm me-2">
+                                    Ver
                                 </a>
                                 <a href="{% url 'descargar_documento' doc.id %}" class="btn btn-outline-success btn-sm">
+                                    Descargar
                                 </a>
                             </td>
 
