remover 'Ver el sitio' de las secciones

--- a/repositorio/templates/admin/sitio_base.html
+++ b/repositorio/templates/admin/sitio_base.html
@@ -9,6 +9,10 @@
 </h1>
 {% endblock %}
 
+{# 🔥 Este bloque elimina "VER EL SITIO" #}
+{% block nav-global %}
+{% endblock %}
+
 {% block content %}
   <h1>Importar usuarios desde CSV</h1>
   <p>Haz clic abajo para ir a la herramienta de importación:</p>
