--- a/repositorio/templates/repositorio/base.html
+++ b/repositorio/templates/repositorio/base.html
@@ -19,19 +19,10 @@ Las otras plantillas heredan las extensiones de esta.
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container">
-        <a class="navbar-brand" href="
-            {% if user.is_authenticated %}
-                {% if user.perfil.tipo == 'docente' %}
-                    {% url 'dashboard_docente' %}
-                {% else %}
-                    {% url 'dashboard_estudiante' %}
-                {% endif %}
-            {% else %}
-                {% url 'login' %}
-            {% endif %}
-        ">Repositorio</a>
 
-        <div class="d-flex align-items-center">
+        {# Enlace "Repositorio" eliminado del navbar #}
+
+        <div class="d-flex align-items-center ms-auto">
             {% if user.is_authenticated %}
                 <span class="navbar-text text-white me-3">
                     Hola, {{ user.username }}
