--- a/repositorio/templates/repositorio/mensajes/mensajes_enviados.html
+++ b/repositorio/templates/repositorio/mensajes/mensajes_enviados.html
@@ -11,9 +11,21 @@
         </div>
 
         <div class="d-flex gap-2">
+
+            {% if request.user.perfil.tipo == 'docente' %}
+                <a href="{% url 'dashboard_docente' %}" class="btn btn-outline-secondary btn-sm">
+                    Volver a inicio
+                </a>
+            {% else %}
+                <a href="{% url 'dashboard_estudiante' %}" class="btn btn-outline-secondary btn-sm">
+                    Volver a inicio
+                </a>
+            {% endif %}
+
             <a href="{% url 'redactar_mensaje' %}" class="btn btn-success btn-sm">
                 Nuevo mensaje
             </a>
+
             <a href="{% url 'bandeja_entrada' %}" class="btn btn-outline-secondary btn-sm">
                 Ver recibidos
             </a>
@@ -29,6 +41,7 @@
                             <th scope="col">Para</th>
                             <th scope="col">Asunto</th>
                             <th scope="col">Fecha</th>
+                            <th scope="col" class="text-center">Acciones</th>
                         </tr>
                     </thead>
 
@@ -38,6 +51,16 @@
                             <td>{{ m.destinatario.username }}</td>
                             <td>{{ m.asunto }}</td>
                             <td>{{ m.creado|date:"d/m/Y H:i" }}</td>
+
+                            <td class="text-center">
+                                <form action="{% url 'eliminar_mensaje' m.id %}" method="post"
+                                      onsubmit="return confirm('¿Seguro que deseas eliminar este mensaje enviado?');">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-sm btn-outline-danger">
+                                        Eliminar
+                                    </button>
+                                </form>
+                            </td>
                         </tr>
                         {% endfor %}
                     </tbody>
