--- a/repositorio/templates/repositorio/mensajes/bandeja_entrada.html
+++ b/repositorio/templates/repositorio/mensajes/bandeja_entrada.html
@@ -11,6 +11,17 @@
         </div>
 
         <div class="d-flex gap-2">
+
+            {% if request.user.perfil.tipo == 'docente' %}
+                <a href="{% url 'dashboard_docente' %}" class="btn btn-outline-secondary btn-sm">
+                    Volver a inicio
+                </a>
+            {% else %}
+                <a href="{% url 'dashboard_estudiante' %}" class="btn btn-outline-secondary btn-sm">
+                    Volver a inicio
+                </a>
+            {% endif %}
+
             <a href="{% url 'redactar_mensaje' %}" class="btn btn-success btn-sm">
                 Nuevo mensaje
             </a>
@@ -30,6 +41,7 @@
                             <th scope="col">Asunto</th>
                             <th scope="col">Fecha</th>
                             <th scope="col">Estado</th>
+                            <th scope="col" class="text-center">Acciones</th>
                         </tr>
                     </thead>
 
@@ -50,6 +62,17 @@
                                     <span class="badge bg-primary">Nuevo</span>
                                 {% endif %}
                             </td>
+
+                            <td class="text-center">
+                                <form action="{% url 'eliminar_mensaje' m.id %}" method="post"
+                                      onsubmit="return confirm('¿Seguro que deseas eliminar este mensaje?');">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-sm btn-outline-danger">
+                                        Eliminar
+                                    </button>
+                                </form>
+                            </td>
+
                         </tr>
                         {% endfor %}
                     </tbody>
