--- a/repositorio/templates/admin/index.html
+++ b/repositorio/templates/admin/index.html
@@ -1,28 +1,32 @@
-{% extends "admin/index.html" %}
-{% load i18n %}
+{% extends "admin/base_site.html" %}
+{% load i18n static admin_urls %}
 
 {% block content %}
+<div id="content-main">
 
-{{ block.super }}
+    {# Lista normal de apps del admin (Autenticación, Repositorio, etc.) #}
+    {% include "admin/app_list.html" with app_list=app_list show_changelinks=True %}
 
-<div class="module" style="margin-top: 20px;">
-    <table>
-        <caption style="background-color:#2c576e; color:white; padding:8px; font-weight:bold;">
-            IMPORTACIÓN DE USUARIOS
-        </caption>
-        <tbody>
-            <tr>
-                <th scope="row">
-                    <a href="{% url 'importar_usuarios' %}" style="font-weight:bold;">
-                        Importar usuarios desde CSV
-                    </a>
-                </th>
-                <td class="action-wrapper">
-                    <a href="{% url 'importar_usuarios' %}" class="addlink">Ir</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    {# Nuestra nueva sección azul #}
+    <div class="module" style="margin-top: 20px;">
+        <table>
+            <caption style="background-color:#2c576e; color:white; padding:8px; font-weight:bold;">
+                IMPORTACIÓN DE USUARIOS
+            </caption>
+            <tbody>
+                <tr>
+                    <th scope="row">
+                        <a href="{% url 'importar_usuarios' %}" style="font-weight:bold;">
+                            Importar usuarios desde CSV
+                        </a>
+                    </th>
+                    <td class="action-wrapper">
+                        <a href="{% url 'importar_usuarios' %}" class="addlink">Ir</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </div>
-
 {% endblock %}
