actualizar columna que estorba

--- a/repositorio/templates/admin/base_site.html
+++ b/repositorio/templates/admin/base_site.html
@@ -9,3 +9,7 @@
 {# Esto vacía el bloque donde Django mete "Ver el sitio" #}
 {% block nav-global %}
 {% endblock %}
+
+{# Esto oculta la barra lateral de la izquierda #}
+{% block nav-sidebar %}
+{% endblock %}
